hphp/hack/test/typecheck/is_expression/tconst3.php.exp
File "tconst3.php", line 7, characters 15-21:
Invalid "is" expression hint (Typing[4195])
  File "tconst3.php", line 4, characters 28-45:
  The "is" operator cannot be used with a function type
